MathParser.ebnf
Note: EBNF means Erik's BNF :)
EBNF of C++ : http://www.externsoft.ch/download/cpp-iso.html
left or right associativity: https://stackoverflow.com/questions/41784524/preferred-way-of-removing-left-recursion-of-ebnf

program = statements

define = ('#define' | '#undef'} <define options> EOL

defineOptions = ('date_format' ('mdy' | 'dmy') |  'date_units'

echoComment = '!//' rest_of_line

comment = '//' rest_of_line

functionDef = 'function' id '(' [functionParamDefs] ')' '{' statementBlock '}' [';']

functionParamDefs = id [ ',' id ]

statements = '/#' statementsBlock '#/' |
             '/!' statementsBlock '!/'

statementsBlock = { statement }

statement = ('!' | '#') exprStatement ( ';' | EOF ) |
            define |
            functionDef

exprStatement = addExpr |
            assignment

assignment = id '=' listExpr |
            id ('+=' | '-=' | '*=' | '/=') addExpr 

addExpr = multExpr [ ("+" | "-") multExpr ]

multExpr = powerExpr [ ("*" | "/" | "%" | "%%") powerExpr ]

powerExpr = impliedMultExpr |
            powerExpr "^" impliedMultExpr

impliedMultExpr = unaryExpr |
                  unaryExpr (id | 
                             const | 
                             ( '(' postFixExpr ')' )
                            )

unaryExpr = postFixExpr |
            ("-" | "+") postFixExpr

postFixExpr = unitExpr |
            postFixExpr '.' ( "dec" | "hex" | "bin") |
            postFixExpr '.'             // clear unit
            postFixExpr '.'  id  |
            postFixExpr '.' ("day" | "year" | "month")
            postFixExpr '!'
            primaryExpr ("++" | "--")
            
unitExpr = primaryExpr [unit]

primaryExpr = const | 
              id | 
              "(", listExpr, ")" |
              callExpr |
              absExpr

absExpr = '|' addExpr '|'

const = {-} [0..9] unit |
        QUOT dateString QUOT

unit = id

callExpr = funcId '(' listExpr ')'

listExpr = addExpr [ ',' addExpr ]

dateString = dateElement dateSeparator dateElement dateSeparator dateElement

dateElement = integer | 'last' | monthName | dayName | timeString

dateSeparator = ' ' | '/' | '-'

timeSeparator = ':'
timeString = ...todo...
